sass/_watch.scss
#watch-content {
    display: flex;
    flex-direction: column;
    gap: 64px;
    padding: clamp(1rem, 5vw, 80px);

    #pills-row {
        display: flex;
        flex-wrap: wrap;
        gap: .5em;
        justify-content: center
    }

    .pill {
        line-height: 1.5;
        display: inline-block;
        border: 2px solid transparent;
        border-radius: 9999px;
        padding: 0em .5em;

        &:focus {
            outline: 1px solid black;
        }
    }

    #pills-row>.pill {
        cursor: pointer;
    }

    .pill.selected {
        border-color: currentColor;
    }

    .pill.selected.matrix {
        outline: 1px solid black;
    }

    .pill.matrix {
        color: #fff;
        $pill-color: #000;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 15%);
        }
    }

    .pill.matrix-in-practice {
        color: #5A0C5C;
        $pill-color: #EFD5F6;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 2.5%);
        }
    }

    .pill.public-sector {
        color: #245C0C;
        $pill-color: #DFF6D5;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 2.5%);
        }
    }

    .pill.matrix-in-the-wild {
        color: #0C145C;
        $pill-color: #D5D6F6;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 2.5%);
        }
    }

    .pill.matrix-internals {
        color: #5C0C0C;
        $pill-color: #F6D5D5;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 2.5%);
        }
    }

    .pill.social-impact {
        color: #5C4A0C;
        $pill-color: #F6F3D5;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 2.5%);
        }
    }

    .pill.room {
        color: #222222;
        $pill-color: #E9E9E9;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 5%);
        }
    }

    .pill.no-video {
        color: #f7dddd;
        $pill-color: #d64141;
        background-color: $pill-color;

        &:hover {
            background-color: lighten($pill-color, 5%);
        }
    }

    .date-separator {
        display: flex;
        align-items: center;
        gap: 12px;
        margin-bottom: 48px;

        .date {
            flex: none;
            font-size: 1.25rem;
            font-weight: 700;
        }

        .line {
            flex: 1;
            height: 0px;
            border-top: 2px solid black;
        }
    }

    .talks-grid {
        display: grid;
        grid-template-columns: repeat(auto-fill, 358px);
        row-gap: 48px;
        column-gap: 24px;
    }

    .talk-card {
        display: block;
        border: 1px solid #D2D2D2;
        border-radius: 16px;
        overflow: clip;

        .thumbnail-container {
            width: 358px;
            height: 200px;
            background-color: #000;
            overflow: clip;

            img {
                border-radius: 0;
            }
        }

        .info-container {
            padding: 24px;
            display: flex;
            flex-direction: column;
            gap: 12px;
            color: var(--color-text);

            h2 {
                font-size: 1.25rem;
                line-height: 1.2;
                margin-block: 0;
                display: -webkit-inline-box;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 2;
                overflow: clip;
                height: 2lh;
            }

            p {
                line-height: 1.4;
                margin-block: 0;
                font-size: 1rem;
                display: -webkit-inline-box;
                -webkit-box-orient: vertical;
                -webkit-line-clamp: 3;
                overflow: clip;
                height: 3lh;
            }

            .speaker {
                font-size: .75rem;
            }

            .talk-pills {
                display: flex;
                gap: 8px;
            }
        }

        &:hover {
            box-shadow: 0px 2px 10px #dedede;
        }

        .additional-links {
            div, a {
                padding: 16px 24px;
            }
            border-top: 1px solid #D2D2D2;

            &:hover {
                background-color: #F7F9FA;
            }

            a {
                display: flex;
                align-items: center;
                gap: 8px;
            }
        }
    }

    .hidden {
        display: none;
    }
}

